Bug 1325988 - Fix ESLint issues in devtools/server/tests/mochitest/ r=tromey
MozReview-Commit-ID: BFaOv5i5Tun

UltraBlame original commit: 1f17eeabf363349bd01b0c6c4edfaf58ade60c6e

--- a/devtools/server/tests/mochitest/Debugger.Source.prototype.element.html
+++ b/devtools/server/tests/mochitest/Debugger.Source.prototype.element.html
@@ -25,11 +25,34 @@ id
 franz
 '
 >
+/
+*
+exported
+franz
+*
+/
+"
+use
+strict
+"
+;
 function
 franz
 (
 )
 {
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+no
+-
+debugger
 debugger
 ;
 }
