--- a/devtools/server/tests/mochitest/animation-data.html
+++ b/devtools/server/tests/mochitest/animation-data.html
@@ -351,6 +351,11 @@ text
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -365,12 +370,12 @@ opener
 .
 postMessage
 (
-'
+"
 ready
-'
-'
+"
+"
 *
-'
+"
 )
 ;
 }
