--- a/devtools/server/tests/mochitest/inspector-eyedropper.html
+++ b/devtools/server/tests/mochitest/inspector-eyedropper.html
@@ -48,6 +48,11 @@ text
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -62,12 +67,12 @@ opener
 .
 postMessage
 (
-'
+"
 ready
-'
-'
+"
+"
 *
-'
+"
 )
 ;
 }
