--- a/devtools/server/tests/mochitest/inspector-search-data.html
+++ b/devtools/server/tests/mochitest/inspector-search-data.html
@@ -80,6 +80,11 @@ text
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -94,12 +99,12 @@ opener
 .
 postMessage
 (
-'
+"
 ready
-'
-'
+"
+"
 *
-'
+"
 )
 ;
 }
