--- a/devtools/server/tests/mochitest/inspector-styles-data.html
+++ b/devtools/server/tests/mochitest/inspector-styles-data.html
@@ -4,6 +4,11 @@ html
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -19,14 +24,16 @@ opener
 .
 postMessage
 (
-'
+"
 ready
-'
-'
+"
+"
 *
-'
+"
 )
+;
 }
+;
 <
 /
 script
