--- a/devtools/server/tests/mochitest/inspector-traversal-data.html
+++ b/devtools/server/tests/mochitest/inspector-traversal-data.html
@@ -118,6 +118,11 @@ text
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -134,17 +139,17 @@ a
 basic
 shadow
 DOM
-var
+let
 host
 =
 document
 .
 querySelector
 (
-'
+"
 #
 shadow
-'
+"
 )
 ;
 if
@@ -154,7 +159,7 @@ host
 createShadowRoot
 )
 {
-var
+let
 root
 =
 host
@@ -167,7 +172,7 @@ root
 .
 innerHTML
 =
-'
+"
 <
 h3
 >
@@ -192,7 +197,7 @@ multiple
 /
 select
 >
-'
+"
 ;
 }
 /
@@ -211,7 +216,7 @@ test
 frame
 traversal
 .
-var
+let
 body
 =
 document
@@ -223,7 +228,7 @@ body
 "
 )
 ;
-var
+let
 data
 =
 "
@@ -247,7 +252,7 @@ html
 >
 "
 ;
-var
+let
 iframe
 =
 document
@@ -285,13 +290,14 @@ opener
 .
 postMessage
 (
-'
+"
 ready
-'
-'
+"
+"
 *
-'
+"
 )
+;
 }
 ;
 iframe
@@ -308,6 +314,7 @@ iframe
 )
 ;
 }
+;
 <
 /
 script
