--- a/devtools/server/tests/mochitest/inspector_css-properties.html
+++ b/devtools/server/tests/mochitest/inspector_css-properties.html
@@ -17,6 +17,11 @@ text
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -31,12 +36,12 @@ opener
 .
 postMessage
 (
-'
+"
 ready
-'
-'
+"
+"
 *
-'
+"
 )
 ;
 }
