--- a/devtools/server/tests/mochitest/inspector_getImageData.html
+++ b/devtools/server/tests/mochitest/inspector_getImageData.html
@@ -111,6 +111,11 @@ C9chp4NHvu
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -178,14 +183,16 @@ opener
 .
 postMessage
 (
-'
+"
 ready
-'
-'
+"
+"
 *
-'
+"
 )
+;
 }
+;
 <
 /
 script
