--- a/devtools/server/tests/mochitest/nonchrome_unsafeDereference.html
+++ b/devtools/server/tests/mochitest/nonchrome_unsafeDereference.html
@@ -9,11 +9,18 @@ html
 <
 script
 >
+"
+use
+strict
+"
+;
 var
 xhr
 =
 new
 XMLHttpRequest
+(
+)
 ;
 xhr
 .
@@ -25,10 +32,10 @@ xhr
 .
 expando
 =
-'
+"
 Expando
 !
-'
+"
 ;
 <
 /
