--- a/devtools/server/tests/mochitest/test_Debugger.Source.prototype.element.html
+++ b/devtools/server/tests/mochitest/test_Debugger.Source.prototype.element.html
@@ -173,6 +173,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 Components
 .
 utils
@@ -213,20 +218,20 @@ waitForExplicitFinish
 (
 )
 ;
-var
+let
 log
 =
-'
-'
+"
+"
 ;
-var
+let
 doc
 dieter
 ulrich
 isolde
 albrecht
 ;
-var
+let
 dbg
 iframeDO
 DOFor
@@ -291,7 +296,7 @@ separate
 HTML
 document
 .
-var
+let
 iframe
 =
 document
@@ -342,9 +347,9 @@ onLoadHandler
 log
 +
 =
-'
+"
 l
-'
+"
 ;
 /
 /
@@ -372,6 +377,8 @@ dbg
 =
 new
 Debugger
+(
+)
 ;
 dbg
 .
@@ -422,9 +429,9 @@ doc
 .
 getElementById
 (
-'
+"
 heidi
-'
+"
 )
 .
 dispatchEvent
@@ -432,9 +439,9 @@ dispatchEvent
 new
 Event
 (
-'
+"
 click
-'
+"
 )
 )
 ;
@@ -448,9 +455,9 @@ frame
 log
 +
 =
-'
+"
 f
-'
+"
 ;
 /
 /
@@ -477,15 +484,15 @@ displayName
 =
 =
 =
-'
+"
 franz
-'
-'
+"
+"
 top
 frame
 is
 franz
-'
+"
 )
 ;
 ok
@@ -506,12 +513,12 @@ doc
 .
 getElementById
 (
-'
+"
 franz
-'
+"
 )
 )
-'
+"
 top
 frame
 source
@@ -519,7 +526,7 @@ belongs
 to
 element
 franz
-'
+"
 )
 ;
 ok
@@ -580,9 +587,9 @@ doc
 .
 getElementById
 (
-'
+"
 heinrich
-'
+"
 )
 )
 "
@@ -662,12 +669,12 @@ doc
 .
 getElementById
 (
-'
+"
 heidi
-'
+"
 )
 )
-'
+"
 third
 frame
 source
@@ -675,7 +682,7 @@ belongs
 to
 element
 heidi
-'
+"
 )
 ;
 ok
@@ -694,9 +701,9 @@ elementAttributeName
 =
 =
 =
-'
+"
 onclick
-'
+"
 "
 third
 frame
@@ -726,19 +733,20 @@ doc
 .
 createElement
 (
-'
+"
 script
-'
+"
 )
 ;
 ulrich
 .
 text
 =
-'
+"
 debugger
 ;
-'
+"
+;
 dbg
 .
 onDebuggerStatement
@@ -764,9 +772,9 @@ frame
 log
 +
 =
-'
+"
 u
-'
+"
 ;
 /
 /
@@ -851,19 +859,19 @@ doc
 .
 createElement
 (
-'
+"
 script
-'
+"
 )
 ;
 isolde
 .
 setAttribute
 (
-'
+"
 src
-'
-'
+"
+"
 Debugger
 .
 Source
@@ -875,21 +883,21 @@ element
 2
 .
 js
-'
+"
 )
 ;
 isolde
 .
 setAttribute
 (
-'
+"
 id
-'
-'
+"
+"
 idolde
 my
 dear
-'
+"
 )
 ;
 dbg
@@ -917,9 +925,9 @@ frame
 log
 +
 =
-'
+"
 i
-'
+"
 ;
 /
 /
@@ -998,9 +1006,9 @@ unsafeDereference
 )
 =
 =
-'
+"
 object
-'
+"
 )
 {
 info
@@ -1116,34 +1124,34 @@ doc
 .
 createElement
 (
-'
+"
 div
-'
+"
 )
 ;
 dieter
 .
 setAttribute
 (
-'
+"
 id
-'
-'
+"
+"
 dieter
-'
+"
 )
 ;
 dieter
 .
 setAttribute
 (
-'
+"
 ondrag
-'
-'
+"
+"
 debugger
 ;
-'
+"
 )
 ;
 dbg
@@ -1159,9 +1167,9 @@ dispatchEvent
 new
 Event
 (
-'
+"
 drag
-'
+"
 )
 )
 ;
@@ -1175,9 +1183,9 @@ frame
 log
 +
 =
-'
+"
 d
-'
+"
 ;
 /
 /
@@ -1233,9 +1241,9 @@ elementAttributeName
 =
 =
 =
-'
+"
 ondrag
-'
+"
 "
 second
 event
@@ -1382,9 +1390,9 @@ dispatchEvent
 new
 Event
 (
-'
+"
 resize
-'
+"
 {
 cancelable
 :
@@ -1403,9 +1411,9 @@ frame
 log
 +
 =
-'
+"
 e
-'
+"
 ;
 /
 /
@@ -1480,9 +1488,9 @@ elementAttributeName
 =
 =
 =
-'
+"
 onresize
-'
+"
 "
 onresize
 event
@@ -1555,7 +1563,7 @@ doc
 .
 createElementNS
 (
-'
+"
 http
 :
 /
@@ -1569,23 +1577,23 @@ org
 2000
 /
 svg
-'
-'
+"
+"
 svg
-'
+"
 )
 ;
 albrecht
 .
 setAttribute
 (
-'
+"
 onload
-'
-'
+"
+"
 debugger
 ;
-'
+"
 )
 ;
 dbg
@@ -1617,9 +1625,9 @@ frame
 log
 +
 =
-'
+"
 s
-'
+"
 ;
 /
 /
@@ -1678,9 +1686,9 @@ elementAttributeName
 =
 =
 =
-'
+"
 onload
-'
+"
 "
 SVGLoad
 event
@@ -1703,9 +1711,9 @@ log
 =
 =
 =
-'
+"
 lfuides
-'
+"
 "
 all
 tests
@@ -1722,6 +1730,7 @@ finish
 ;
 }
 }
+;
 <
 /
 script
