--- a/devtools/server/tests/mochitest/test_Debugger.Source.prototype.introductionScript.html
+++ b/devtools/server/tests/mochitest/test_Debugger.Source.prototype.introductionScript.html
@@ -171,6 +171,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 Components
 .
 utils
@@ -211,7 +216,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+let
 dbg
 iframeDO
 doc
@@ -225,7 +230,7 @@ iframe
 to
 debug
 .
-var
+let
 iframe
 =
 document
@@ -304,6 +309,8 @@ dbg
 =
 new
 Debugger
+(
+)
 ;
 iframeDO
 =
@@ -324,16 +331,16 @@ contentWindow
 .
 document
 ;
-var
+let
 script
 =
 doc
 .
 createElement
 (
-'
+"
 script
-'
+"
 )
 ;
 script
@@ -401,7 +408,7 @@ and
 introduction
 offset
 .
-var
+let
 source
 =
 frame
@@ -481,16 +488,16 @@ proper
 introduction
 information
 .
-var
+let
 script2
 =
 doc
 .
 createElement
 (
-'
+"
 script
-'
+"
 )
 ;
 script2
@@ -560,7 +567,7 @@ that
 called
 eval
 .
-var
+let
 source
 =
 frame
@@ -569,7 +576,7 @@ script
 .
 source
 ;
-var
+let
 frame2
 =
 frame
@@ -584,9 +591,9 @@ introductionType
 =
 =
 =
-'
+"
 eval
-'
+"
 "
 top
 frame
@@ -746,9 +753,9 @@ introductionType
 =
 =
 =
-'
+"
 scriptElement
-'
+"
 "
 older
 frame
@@ -813,6 +820,7 @@ finish
 ;
 }
 }
+;
 <
 /
 script
