--- a/devtools/server/tests/mochitest/test_Debugger.Source.prototype.introductionType.html
+++ b/devtools/server/tests/mochitest/test_Debugger.Source.prototype.introductionType.html
@@ -191,6 +191,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 Components
 .
 utils
@@ -217,14 +222,14 @@ addDebuggerToGlobal
 this
 )
 ;
-var
+let
 dbg
 ;
-var
+let
 iframeDO
 doc
 ;
-var
+let
 Tootles
 TootlesDO
 ;
@@ -263,7 +268,7 @@ iframe
 to
 debug
 .
-var
+let
 iframe
 =
 document
@@ -384,6 +389,8 @@ dbg
 =
 new
 Debugger
+(
+)
 ;
 iframeDO
 =
@@ -410,9 +417,9 @@ doc
 .
 getElementById
 (
-'
+"
 Tootles
-'
+"
 )
 ;
 TootlesDO
@@ -493,9 +500,9 @@ dispatchEvent
 new
 Event
 (
-'
+"
 click
-'
+"
 )
 )
 ;
@@ -545,9 +552,9 @@ script
 source
 .
 elementAttributeName
-'
+"
 onclick
-'
+"
 "
 top
 frame
@@ -580,9 +587,9 @@ script
 source
 .
 introductionType
-'
+"
 eventHandler
-'
+"
 "
 top
 frame
@@ -657,13 +664,13 @@ Tootles
 .
 setAttribute
 (
-'
+"
 ondrag
-'
-'
+"
+"
 debugger
 ;
-'
+"
 )
 ;
 Tootles
@@ -673,9 +680,9 @@ dispatchEvent
 new
 Event
 (
-'
+"
 drag
-'
+"
 )
 )
 ;
@@ -724,9 +731,9 @@ script
 source
 .
 elementAttributeName
-'
+"
 ondrag
-'
+"
 "
 top
 frame
@@ -759,9 +766,9 @@ script
 source
 .
 introductionType
-'
+"
 eventHandler
-'
+"
 "
 top
 frame
@@ -805,21 +812,21 @@ checkAuddie
 (
 )
 {
-var
+let
 fnDO
 =
 iframeDO
 .
 getOwnPropertyDescriptor
 (
-'
+"
 auddie
-'
+"
 )
 .
 value
 ;
-var
+let
 AuddieDO
 =
 iframeDO
@@ -830,9 +837,9 @@ doc
 .
 getElementById
 (
-'
+"
 Auddie
-'
+"
 )
 )
 ;
@@ -841,9 +848,9 @@ is
 fnDO
 .
 class
-'
+"
 Function
-'
+"
 "
 Script
 element
@@ -927,9 +934,9 @@ script
 source
 .
 introductionType
-'
+"
 scriptElement
-'
+"
 "
 Function
 auddie
@@ -981,19 +988,19 @@ onDebuggerStatement
 =
 RoverDebugger
 ;
-var
+let
 rover
 =
 doc
 .
 createElement
 (
-'
+"
 script
-'
+"
 )
 ;
-var
+let
 roverDO
 =
 iframeDO
@@ -1007,10 +1014,10 @@ rover
 .
 text
 =
-'
+"
 debugger
 ;
-'
+"
 ;
 doc
 .
@@ -1100,9 +1107,9 @@ introductionType
 =
 =
 =
-'
+"
 scriptElement
-'
+"
 "
 Rover
 script
@@ -1148,16 +1155,16 @@ XULDocumentScript
 (
 )
 {
-var
+let
 xulFrame
 =
 document
 .
 createElement
 (
-'
+"
 iframe
-'
+"
 )
 ;
 xulFrame
@@ -1303,7 +1310,7 @@ document
 "
 )
 ;
-var
+let
 xulFrameDO
 =
 dbg
@@ -1315,42 +1322,16 @@ xulFrame
 contentWindow
 )
 ;
-var
-xulDoc
-=
-xulFrame
-.
-contentWindow
-.
-document
-;
-var
-xulieDO
-=
-xulFrameDO
-.
-makeDebuggeeValue
-(
-xulDoc
-.
-getElementById
-(
-'
-xulie
-'
-)
-)
-;
-var
+let
 xulFnDO
 =
 xulFrameDO
 .
 getOwnPropertyDescriptor
 (
-'
+"
 xulScriptFunc
-'
+"
 )
 .
 value
@@ -1359,9 +1340,9 @@ is
 (
 typeof
 xulFnDO
-'
+"
 object
-'
+"
 "
 XUL
 script
@@ -1378,9 +1359,9 @@ is
 xulFnDO
 .
 class
-'
+"
 Function
-'
+"
 "
 XUL
 global
@@ -1466,9 +1447,9 @@ script
 source
 .
 introductionType
-'
+"
 scriptElement
-'
+"
 "
 xulScriptFunc
 '
