--- a/devtools/server/tests/mochitest/test_animation_actor-lifetime.html
+++ b/devtools/server/tests/mochitest/test_animation_actor-lifetime.html
@@ -154,6 +154,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -162,13 +167,6 @@ function
 (
 )
 {
-const
-Ci
-=
-Components
-.
-interfaces
-;
 const
 {
 AnimationsFront
@@ -213,11 +211,6 @@ waitForExplicitFinish
 ;
 let
 gWalker
-=
-null
-;
-let
-gClient
 =
 null
 ;
@@ -317,10 +310,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
