--- a/devtools/server/tests/mochitest/test_connectToChild.html
+++ b/devtools/server/tests/mochitest/test_connectToChild.html
@@ -1,7 +1,7 @@
 <
-SDOCTYPv
-HTM
-.
+!
+DOCTYPE
+HTML
 >
 <
 html
@@ -134,19 +134,17 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 let
 Cu
 =
 Components
 .
 utils
-;
-let
-Cc
-=
-Components
-.
-classes
 ;
 let
 Ci
@@ -272,6 +270,7 @@ runTests
 )
 ;
 }
+;
 function
 runTests
 (
@@ -374,6 +373,16 @@ FrameScriptScope
 (
 )
 {
+/
+*
+eslint
+-
+disable
+no
+-
+shadow
+*
+/
 const
 {
 require
@@ -416,6 +425,16 @@ main
 "
 )
 ;
+/
+*
+eslint
+-
+enable
+no
+-
+shadow
+*
+/
 if
 (
 !
@@ -903,6 +922,7 @@ SimpleTest
 finish
 (
 )
+;
 }
 firstClient
 (
