--- a/devtools/server/tests/mochitest/test_connection-manager.html
+++ b/devtools/server/tests/mochitest/test_connection-manager.html
@@ -132,6 +132,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -146,14 +151,14 @@ waitForExplicitFinish
 (
 )
 ;
-var
+const
 Cu
 =
 Components
 .
 utils
 ;
-var
+const
 {
 require
 }
@@ -179,7 +184,7 @@ jsm
 }
 )
 ;
-var
+const
 {
 DebuggerServer
 }
@@ -195,7 +200,7 @@ main
 "
 )
 ;
-var
+const
 Services
 =
 require
@@ -226,7 +231,7 @@ addBrowserActors
 )
 ;
 }
-var
+const
 {
 ConnectionManager
 Connection
@@ -247,7 +252,7 @@ manager
 "
 )
 ;
-var
+let
 orgCount
 =
 ConnectionManager
@@ -292,7 +297,7 @@ connection
 }
 )
 ;
-var
+let
 c1
 =
 ConnectionManager
@@ -301,7 +306,7 @@ createConnection
 (
 )
 ;
-var
+let
 c2
 =
 ConnectionManager
@@ -374,12 +379,12 @@ destroyed
 "
 )
 ;
-var
+let
 c
 =
 c2
 ;
-var
+let
 eventsRef
 =
 "
@@ -390,18 +395,21 @@ disconnected
 host
 -
 changed
+"
++
+"
 disconnected
 timeout
 destroyed
 "
 ;
-var
+let
 events
 =
 [
 ]
 ;
-var
+let
 s
 =
 Connection
@@ -497,6 +505,7 @@ c
 disconnect
 (
 )
+;
 }
 )
 ;
@@ -574,6 +583,7 @@ disconnected
 testError
 (
 )
+;
 }
 )
 ;
@@ -614,6 +624,7 @@ destroyed
 finish
 (
 )
+;
 }
 )
 ;
@@ -623,82 +634,6 @@ connect
 (
 )
 ;
-function
-testStore
-(
-)
-{
-c
-.
-store
-.
-on
-(
-"
-set
-"
-function
-(
-e
-path
-)
-{
-if
-(
-path
-.
-join
-(
-"
-.
-"
-)
-=
-=
-"
-device
-.
-width
-"
-)
-{
-is
-(
-c
-.
-store
-.
-object
-.
-device
-.
-width
-window
-.
-screen
-.
-width
-"
-Store
-is
-fed
-with
-valid
-data
-"
-)
-;
-c
-.
-disconnect
-(
-)
-;
-}
-}
-)
-;
-}
 function
 testError
 (
@@ -797,15 +732,9 @@ the
 connection
 attempts
 timeout
-var
-originalTimeout
+let
+prefRemoteTimeout
 =
-Services
-.
-prefs
-.
-getIntPref
-(
 "
 devtools
 .
@@ -815,6 +744,17 @@ remote
 -
 timeout
 "
+;
+let
+originalTimeout
+=
+Services
+.
+prefs
+.
+getIntPref
+(
+prefRemoteTimeout
 )
 ;
 Services
@@ -860,15 +800,7 @@ prefs
 .
 setIntPref
 (
-"
-devtools
-.
-debugger
-.
-remote
--
-timeout
-"
+prefRemoteTimeout
 originalTimeout
 )
 ;
@@ -888,7 +820,7 @@ keepConnecting
 =
 true
 ;
-var
+let
 port
 =
 ConnectionManager
@@ -902,6 +834,7 @@ ok
 parseInt
 (
 port
+10
 )
 "
 Free
@@ -985,6 +918,7 @@ c1
 )
 ;
 }
+;
 <
 /
 script
