--- a/devtools/server/tests/mochitest/test_css-logic-media-queries.html
+++ b/devtools/server/tests/mochitest/test_css-logic-media-queries.html
@@ -185,6 +185,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -193,7 +198,7 @@ function
 (
 )
 {
-var
+const
 {
 classes
 :
@@ -235,7 +240,7 @@ Ci
 inIDOMUtils
 )
 ;
-var
+const
 {
 require
 }
@@ -261,7 +266,7 @@ jsm
 }
 )
 ;
-var
+const
 Services
 =
 require
@@ -462,6 +467,7 @@ finish
 )
 ;
 }
+;
 <
 /
 script
