--- a/devtools/server/tests/mochitest/test_css-logic-specificity.html
+++ b/devtools/server/tests/mochitest/test_css-logic-specificity.html
@@ -105,6 +105,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -113,7 +118,7 @@ function
 (
 )
 {
-var
+const
 {
 utils
 :
@@ -605,6 +610,7 @@ test
 selectors
 "
 )
+;
 for
 (
 let
@@ -674,6 +680,7 @@ selector
 .
 selectorIndex
 )
+;
 is
 (
 specificity
@@ -753,6 +760,7 @@ finish
 )
 ;
 }
+;
 <
 /
 script
