--- a/devtools/server/tests/mochitest/test_css-properties.html
+++ b/devtools/server/tests/mochitest/test_css-properties.html
@@ -144,6 +144,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -213,6 +218,7 @@ err
 )
 ;
 }
+return
 resolve
 (
 {
@@ -227,6 +233,7 @@ doc
 ;
 }
 )
+;
 }
 function
 toSortedString
@@ -622,9 +629,9 @@ cssProperties
 .
 getValues
 (
-'
+"
 margin
-'
+"
 )
 )
 toSortedString
@@ -665,9 +672,9 @@ cssProperties
 .
 getValues
 (
-'
+"
 foobar
-'
+"
 )
 .
 length
@@ -690,11 +697,11 @@ cssProperties
 .
 getValues
 (
-'
+"
 background
 -
 color
-'
+"
 )
 ;
 ok
@@ -878,6 +885,7 @@ runNextTest
 )
 ;
 }
+;
 <
 /
 script
