--- a/devtools/server/tests/mochitest/test_device.html
+++ b/devtools/server/tests/mochitest/test_device.html
@@ -131,6 +131,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -139,28 +144,28 @@ function
 (
 )
 {
-var
+const
 Cu
 =
 Components
 .
 utils
 ;
-var
+const
 Cc
 =
 Components
 .
 classes
 ;
-var
+const
 Ci
 =
 Components
 .
 interfaces
 ;
-var
+const
 {
 require
 }
@@ -186,7 +191,7 @@ jsm
 }
 )
 ;
-var
+const
 {
 DebuggerClient
 }
@@ -204,7 +209,7 @@ main
 "
 )
 ;
-var
+const
 {
 DebuggerServer
 }
@@ -220,7 +225,7 @@ main
 "
 )
 ;
-var
+const
 Services
 =
 require
@@ -236,7 +241,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+const
 {
 getDeviceFront
 }
@@ -275,7 +280,7 @@ addBrowserActors
 )
 ;
 }
-var
+let
 client
 =
 new
@@ -308,29 +313,29 @@ listTabs
 function
 onListTabs
 (
-aResponse
+response
 )
 {
-var
+let
 d
 =
 getDeviceFront
 (
 client
-aResponse
+response
 )
 ;
-var
+let
 desc
 ;
-var
+let
 appInfo
 =
 Services
 .
 appinfo
 ;
-var
+let
 utils
 =
 window
@@ -349,7 +354,7 @@ Ci
 nsIDOMWindowUtils
 )
 ;
-var
+let
 localDesc
 =
 {
@@ -492,6 +497,7 @@ screen
 .
 height
 }
+;
 function
 checkValues
 (
@@ -499,7 +505,7 @@ checkValues
 {
 for
 (
-var
+let
 key
 in
 localDesc
@@ -529,7 +535,7 @@ key
 )
 ;
 }
-var
+let
 currProfD
 =
 Services
@@ -546,7 +552,7 @@ Ci
 nsIFile
 )
 ;
-var
+let
 profileDir
 =
 currProfD
@@ -607,6 +613,7 @@ SimpleTest
 finish
 (
 )
+;
 }
 )
 ;
@@ -619,14 +626,16 @@ getDescription
 .
 then
 (
+function
 (
 v
 )
-=
->
+{
 desc
 =
 v
+;
+}
 )
 .
 then
@@ -641,6 +650,7 @@ checkValues
 )
 ;
 }
+;
 <
 /
 script
