--- a/devtools/server/tests/mochitest/test_director.html
+++ b/devtools/server/tests/mochitest/test_director.html
@@ -169,10 +169,10 @@ application
 javascript
 "
 >
-const
-WAIT_EVENT_TIMEOUT
-=
-3000
+"
+use
+strict
+"
 ;
 window
 .
@@ -197,7 +197,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+let
 tests
 =
 [
@@ -295,7 +295,7 @@ teardown
 ;
 for
 (
-var
+let
 test
 of
 tests
@@ -322,6 +322,7 @@ SimpleTest
 finish
 (
 )
+;
 }
 function
 error
@@ -385,7 +386,7 @@ finish
 ;
 }
 ;
-var
+let
 targetWin
 =
 null
@@ -457,80 +458,6 @@ close
 ;
 }
 }
-/
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-test
-cases
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-/
 function
 runDirectorRegistryActorTest
 (
@@ -608,6 +535,7 @@ scriptOptions
 {
 }
 }
+;
 return
 Task
 .
@@ -629,7 +557,7 @@ newConnectedDebuggerClient
 (
 )
 ;
-var
+let
 directorRegistryClient
 =
 new
