--- a/devtools/server/tests/mochitest/test_director_connectToChild.html
+++ b/devtools/server/tests/mochitest/test_director_connectToChild.html
@@ -169,6 +169,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -192,7 +197,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+let
 tests
 =
 [
@@ -277,7 +282,7 @@ teardown
 ;
 for
 (
-var
+let
 test
 of
 tests
@@ -365,80 +370,6 @@ destroy
 )
 ;
 }
-/
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-test
-cases
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-*
-/
 function
 runPropagateDirectorScriptsToChildTest
 (
@@ -481,7 +412,7 @@ function
 (
 )
 {
-var
+let
 {
 client
 root
@@ -493,7 +424,7 @@ newConnectedDebuggerClient
 (
 )
 ;
-var
+let
 directorRegistryClient
 =
 new
@@ -540,14 +471,14 @@ scriptOptions
 }
 )
 ;
-var
+let
 conn
 =
 transport
 .
 _serverConnection
 ;
-var
+let
 childActor
 =
 yield
@@ -581,7 +512,7 @@ defined
 "
 )
 ;
-var
+let
 childDirectorManagerClient
 =
 new
@@ -591,7 +522,7 @@ client
 childActor
 )
 ;
-var
+let
 directorScriptList
 =
 yield
@@ -633,6 +564,7 @@ propagated
 correctly
 "
 )
+;
 yield
 client
 .
