--- a/devtools/server/tests/mochitest/test_executeInGlobal-outerized_this.html
+++ b/devtools/server/tests/mochitest/test_executeInGlobal-outerized_this.html
@@ -168,6 +168,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 Components
 .
 utils
@@ -208,7 +213,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+let
 iframe
 =
 document
@@ -268,13 +273,15 @@ firstOnLoadHandler
 (
 )
 {
-var
+let
 dbg
 =
 new
 Debugger
+(
+)
 ;
-var
+let
 page1DO
 =
 dbg
@@ -322,7 +329,7 @@ function
 (
 )
 {
-var
+let
 page2DO
 =
 dbg
@@ -393,16 +400,16 @@ page1DO
 .
 executeInGlobal
 (
-'
+"
 me
-'
+"
 )
 .
 return
-'
+"
 page
 1
-'
+"
 "
 page1DO
 continues
@@ -420,16 +427,16 @@ page2DO
 .
 executeInGlobal
 (
-'
+"
 me
-'
+"
 )
 .
 return
-'
+"
 page
 2
-'
+"
 "
 page2DO
 refers
@@ -445,13 +452,13 @@ page1DO
 .
 executeInGlobal
 (
-'
+"
 this
 =
 =
 =
 window
-'
+"
 )
 .
 return
@@ -481,13 +488,13 @@ page1DO
 .
 executeInGlobalWithBindings
 (
-'
+"
 this
 =
 =
 =
 window
-'
+"
 {
 x
 :
@@ -522,13 +529,13 @@ page2DO
 .
 executeInGlobal
 (
-'
+"
 this
 =
 =
 =
 window
-'
+"
 )
 .
 return
@@ -558,13 +565,13 @@ page2DO
 .
 executeInGlobalWithBindings
 (
-'
+"
 this
 =
 =
 =
 window
-'
+"
 {
 x
 :
@@ -612,7 +619,7 @@ have
 to
 innerize
 .
-var
+let
 outerDO
 =
 page1DO
@@ -682,20 +689,18 @@ SimpleTest
 .
 doesThrow
 (
-function
 (
 )
-{
+=
+>
 outerDO
 .
 executeInGlobal
 (
-'
+"
 me
-'
+"
 )
-;
-}
 "
 outer
 window
@@ -719,8 +724,10 @@ finish
 )
 ;
 }
+;
 }
 }
+;
 <
 /
 script
