--- a/devtools/server/tests/mochitest/test_framerate_02.html
+++ b/devtools/server/tests/mochitest/test_framerate_02.html
@@ -128,6 +128,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -136,28 +141,14 @@ function
 (
 )
 {
-var
+const
 Cu
 =
 Components
 .
 utils
 ;
-var
-Cc
-=
-Components
-.
-classes
-;
-var
-Ci
-=
-Components
-.
-interfaces
-;
-var
+const
 {
 require
 }
@@ -183,7 +174,7 @@ jsm
 }
 )
 ;
-var
+const
 {
 DebuggerClient
 }
@@ -201,7 +192,7 @@ main
 "
 )
 ;
-var
+const
 {
 DebuggerServer
 }
@@ -217,7 +208,7 @@ main
 "
 )
 ;
-var
+const
 Services
 =
 require
@@ -284,7 +275,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+const
 {
 FramerateFront
 }
@@ -314,13 +305,13 @@ clamp
 60
 )
 {
-var
+let
 timeline
 =
 [
 ]
 ;
-var
+let
 totalTicks
 =
 ticks
@@ -393,12 +384,12 @@ return
 timeline
 ;
 }
-var
+let
 frameCount
 =
 0
 ;
-var
+let
 prevTime
 =
 ticks
@@ -408,7 +399,7 @@ ticks
 ;
 for
 (
-var
+let
 i
 =
 1
@@ -422,7 +413,7 @@ i
 +
 )
 {
-var
+let
 currTime
 =
 ticks
@@ -434,7 +425,7 @@ frameCount
 +
 +
 ;
-var
+let
 elapsedTime
 =
 currTime
@@ -451,7 +442,7 @@ interval
 continue
 ;
 }
-var
+let
 framerate
 =
 Math
@@ -509,7 +500,6 @@ return
 timeline
 ;
 }
-;
 if
 (
 !
@@ -531,7 +521,7 @@ addBrowserActors
 )
 ;
 }
-var
+let
 client
 =
 new
@@ -564,22 +554,22 @@ listTabs
 function
 onListTabs
 (
-aResponse
+response
 )
 {
-var
+let
 form
 =
-aResponse
+response
 .
 tabs
 [
-aResponse
+response
 .
 selected
 ]
 ;
-var
+let
 front
 =
 FramerateFront
@@ -633,7 +623,7 @@ empty
 "
 )
 ;
-var
+let
 timeline
 =
 plotFPS
@@ -771,6 +761,20 @@ be
 "
 )
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+max
+-
+nested
+-
+callbacks
 client
 .
 close
@@ -795,8 +799,6 @@ SimpleTest
 finish
 (
 )
-}
-)
 ;
 }
 )
@@ -808,6 +810,10 @@ finish
 )
 ;
 }
+)
+;
+}
+;
 <
 /
 script
