--- a/devtools/server/tests/mochitest/test_framerate_04.html
+++ b/devtools/server/tests/mochitest/test_framerate_04.html
@@ -157,6 +157,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -171,7 +176,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+const
 {
 FramerateFront
 }
@@ -189,7 +194,7 @@ framerate
 "
 )
 ;
-var
+const
 {
 TargetFactory
 }
@@ -207,7 +212,7 @@ target
 "
 )
 ;
-var
+let
 url
 =
 document
@@ -236,14 +241,14 @@ form
 contentDoc
 )
 {
-var
+let
 contentWin
 =
 contentDoc
 .
 defaultView
 ;
-var
+let
 chromeWin
 =
 Services
@@ -259,7 +264,7 @@ browser
 "
 )
 ;
-var
+let
 selectedTab
 =
 chromeWin
@@ -268,7 +273,7 @@ gBrowser
 .
 selectedTab
 ;
-var
+let
 target
 =
 TargetFactory
@@ -278,7 +283,7 @@ forTab
 selectedTab
 )
 ;
-var
+let
 front
 =
 FramerateFront
@@ -321,6 +326,18 @@ firstBatch
 =
 >
 {
+/
+*
+eslint
+-
+disable
+max
+-
+nested
+-
+callbacks
+*
+/
 target
 .
 once
@@ -373,6 +390,18 @@ secondBatch
 }
 )
 ;
+/
+*
+eslint
+-
+enable
+max
+-
+nested
+-
+callbacks
+*
+/
 contentWin
 .
 location
@@ -432,7 +461,7 @@ available
 "
 )
 ;
-var
+let
 diff
 =
 secondBatch
@@ -589,11 +618,13 @@ SimpleTest
 finish
 (
 )
+;
 }
 )
 ;
 }
 }
+;
 <
 /
 script
