--- a/devtools/server/tests/mochitest/test_framerate_05.html
+++ b/devtools/server/tests/mochitest/test_framerate_05.html
@@ -133,6 +133,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -141,28 +146,14 @@ function
 (
 )
 {
-var
+let
 Cu
 =
 Components
 .
 utils
 ;
-var
-Cc
-=
-Components
-.
-classes
-;
-var
-Ci
-=
-Components
-.
-interfaces
-;
-var
+const
 {
 require
 }
@@ -188,7 +179,7 @@ jsm
 }
 )
 ;
-var
+const
 {
 DebuggerClient
 }
@@ -206,7 +197,7 @@ main
 "
 )
 ;
-var
+const
 {
 DebuggerServer
 }
@@ -222,7 +213,7 @@ main
 "
 )
 ;
-var
+const
 Services
 =
 require
@@ -289,7 +280,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+const
 {
 FramerateFront
 }
@@ -319,7 +310,7 @@ addBrowserActors
 (
 )
 ;
-var
+let
 client
 =
 new
@@ -352,22 +343,22 @@ listTabs
 function
 onListTabs
 (
-aResponse
+response
 )
 {
-var
+let
 form
 =
-aResponse
+response
 .
 tabs
 [
-aResponse
+response
 .
 selected
 ]
 ;
-var
+let
 front
 =
 FramerateFront
@@ -389,6 +380,18 @@ then
 =
 >
 {
+/
+*
+eslint
+-
+disable
+max
+-
+nested
+-
+callbacks
+*
+/
 window
 .
 setTimeout
@@ -550,6 +553,7 @@ SimpleTest
 finish
 (
 )
+;
 }
 )
 ;
@@ -570,6 +574,18 @@ finish
 1000
 )
 ;
+/
+*
+eslint
+-
+enable
+max
+-
+nested
+-
+callbacks
+*
+/
 }
 )
 ;
@@ -580,6 +596,7 @@ finish
 )
 ;
 }
+;
 <
 /
 script
