--- a/devtools/server/tests/mochitest/test_framerate_06.html
+++ b/devtools/server/tests/mochitest/test_framerate_06.html
@@ -160,6 +160,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -174,7 +179,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+const
 {
 FramerateFront
 }
@@ -192,25 +197,7 @@ framerate
 "
 )
 ;
-var
-{
-TargetFactory
-}
-=
-require
-(
-"
-devtools
-/
-client
-/
-framework
-/
-target
-"
-)
-;
-var
+let
 url
 =
 document
@@ -239,49 +226,14 @@ form
 contentDoc
 )
 {
-var
+let
 contentWin
 =
 contentDoc
 .
 defaultView
 ;
-var
-chromeWin
-=
-Services
-.
-wm
-.
-getMostRecentWindow
-(
-"
-navigator
-:
-browser
-"
-)
-;
-var
-selectedTab
-=
-chromeWin
-.
-gBrowser
-.
-selectedTab
-;
-var
-target
-=
-TargetFactory
-.
-forTab
-(
-selectedTab
-)
-;
-var
+let
 front
 =
 FramerateFront
@@ -358,6 +310,18 @@ message
 loaded
 )
 ;
+/
+*
+eslint
+-
+disable
+max
+-
+nested
+-
+callbacks
+*
+/
 window
 .
 setTimeout
@@ -392,6 +356,18 @@ ticks
 1000
 )
 ;
+/
+*
+eslint
+-
+enable
+max
+-
+nested
+-
+callbacks
+*
+/
 }
 }
 )
@@ -419,7 +395,7 @@ client
 ticks
 )
 {
-var
+let
 diffs
 =
 [
@@ -439,7 +415,7 @@ ticks
 ;
 for
 (
-var
+let
 i
 =
 1
@@ -455,7 +431,7 @@ i
 +
 )
 {
-var
+let
 prev
 =
 ticks
@@ -465,7 +441,7 @@ i
 1
 ]
 ;
-var
+let
 curr
 =
 ticks
@@ -582,7 +558,7 @@ to
 be
 our
 threshold
-var
+let
 THRESHOLD
 =
 2
@@ -612,7 +588,7 @@ seconds
 "
 )
 ;
-var
+let
 belowThreshold
 =
 diffs
@@ -674,11 +650,13 @@ SimpleTest
 finish
 (
 )
+;
 }
 )
 ;
 }
 }
+;
 <
 /
 script
