--- a/devtools/server/tests/mochitest/test_getProcess.html
+++ b/devtools/server/tests/mochitest/test_getProcess.html
@@ -134,26 +134,17 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 let
 Cu
 =
 Components
 .
 utils
-;
-let
-Cc
-=
-Components
-.
-classes
-;
-let
-Ci
-=
-Components
-.
-interfaces
 ;
 let
 {
@@ -314,6 +305,7 @@ runTests
 )
 ;
 }
+;
 function
 runTests
 (
@@ -669,17 +661,16 @@ id
 .
 then
 (
-response
+(
+{
+form
+:
+actor
+}
+)
 =
 >
 {
-let
-actor
-=
-response
-.
-form
-;
 ok
 (
 actor
@@ -748,13 +739,13 @@ a
 }
 function
 (
-response
+{
+result
+}
 )
 {
 ok
 (
-response
-.
 result
 42
 "
@@ -885,7 +876,6 @@ loader
 :
 destroy
 "
-false
 )
 ;
 sendAsyncMessage
@@ -957,6 +947,7 @@ destroy
 "
 processListener
 )
+;
 done
 (
 )
@@ -978,6 +969,7 @@ destroy
 "
 processListener
 )
+;
 }
 )
 ;
@@ -1073,6 +1065,7 @@ SimpleTest
 finish
 (
 )
+;
 }
 connect
 (
