--- a/devtools/server/tests/mochitest/test_inspector-anonymous.html
+++ b/devtools/server/tests/mochitest/test_inspector-anonymous.html
@@ -154,6 +154,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -281,7 +286,7 @@ gWalker
 null
 ;
 let
-gClient
+gInspectee
 =
 null
 ;
@@ -371,10 +376,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
@@ -669,6 +670,7 @@ return
 nodeFilterConstants
 .
 FILTER_ACCEPT
+;
 }
 )
 ;
