--- a/devtools/server/tests/mochitest/test_inspector-changevalue.html
+++ b/devtools/server/tests/mochitest/test_inspector-changevalue.html
@@ -152,28 +152,17 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 const
 Ci
 =
 Components
 .
 interfaces
-;
-const
-inspector
-=
-require
-(
-"
-devtools
-/
-shared
-/
-fronts
-/
-inspector
-"
-)
 ;
 window
 .
@@ -194,32 +183,17 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspectee
 =
 null
 ;
-var
-gClient
-=
-null
-;
-var
+let
 gWalker
 =
 null
 ;
-function
-assertOwnership
-(
-)
-{
-assertOwnershipTrees
-(
-gWalker
-)
-;
-}
 addTest
 (
 function
@@ -311,10 +285,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
@@ -522,14 +492,13 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
-delete
 gInspectee
-;
-delete
-gClient
+=
+null
 ;
 runNextTest
 (
