--- a/devtools/server/tests/mochitest/test_inspector-dead-nodes.html
+++ b/devtools/server/tests/mochitest/test_inspector-dead-nodes.html
@@ -154,21 +154,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -189,9 +178,16 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gWalker
+=
+null
+;
+let
 gDoc
+=
+null
 ;
 addAsyncTest
 (
@@ -2936,6 +2932,8 @@ cleanup
 {
 gWalker
 =
+null
+;
 gDoc
 =
 null
