--- a/devtools/server/tests/mochitest/test_inspector-duplicate-node.html
+++ b/devtools/server/tests/mochitest/test_inspector-duplicate-node.html
@@ -154,21 +154,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -189,32 +178,12 @@ runNextTest
 )
 ;
 }
-var
-gInspectee
-=
-null
 ;
-var
-gClient
-=
-null
-;
-var
+let
 gWalker
 =
 null
 ;
-function
-assertOwnership
-(
-)
-{
-assertOwnershipTrees
-(
-gWalker
-)
-;
-}
 addTest
 (
 function
@@ -247,10 +216,6 @@ tab
 doc
 )
 {
-gInspectee
-=
-doc
-;
 let
 {
 InspectorFront
@@ -306,10 +271,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
@@ -454,14 +415,9 @@ cleanup
 (
 )
 {
-delete
 gWalker
-;
-delete
-gInspectee
-;
-delete
-gClient
+=
+null
 ;
 runNextTest
 (
