--- a/devtools/server/tests/mochitest/test_inspector-hide.html
+++ b/devtools/server/tests/mochitest/test_inspector-hide.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,13 +176,14 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gWalker
 =
 null
 ;
-var
-gClient
+let
+gInspectee
 =
 null
 ;
@@ -288,10 +278,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
@@ -515,11 +501,13 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
-delete
-gClient
+gInspectee
+=
+null
 ;
 runNextTest
 (
