--- a/devtools/server/tests/mochitest/test_inspector-insert.html
+++ b/devtools/server/tests/mochitest/test_inspector-insert.html
@@ -152,6 +152,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 const
 inspector
 =
@@ -187,28 +192,17 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gWalker
 =
 null
 ;
-var
-gClient
+let
+gInspectee
 =
 null
 ;
-function
-assertOwnership
-(
-)
-{
-return
-assertOwnershipTrees
-(
-gWalker
-)
-;
-}
 addTest
 (
 function
@@ -264,7 +258,7 @@ inspector
 )
 ;
 let
-inspector
+inspectorFront
 =
 InspectorFront
 (
@@ -274,7 +268,7 @@ tab
 ;
 promiseDone
 (
-inspector
+inspectorFront
 .
 getWalker
 (
@@ -300,10 +294,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
@@ -857,11 +847,13 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
-delete
-gClient
+gInspectee
+=
+null
 ;
 runNextTest
 (
