--- a/devtools/server/tests/mochitest/test_inspector-mutations-attr.html
+++ b/devtools/server/tests/mochitest/test_inspector-mutations-attr.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,25 +176,21 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspectee
 =
 null
 ;
-var
+let
 gWalker
 =
 null
 ;
-var
-gClient
-=
-null
-;
-var
+let
 attrNode
 ;
-var
+let
 attrFront
 ;
 addTest
@@ -300,10 +285,6 @@ actor
 "
 )
 ;
-gClient
-=
-client
-;
 gWalker
 =
 walker
@@ -389,6 +370,7 @@ querySelector
 a
 "
 )
+;
 promiseDone
 (
 gWalker
@@ -436,10 +418,10 @@ gInspectee
 .
 querySelector
 (
-'
+"
 #
 childFrame
-'
+"
 )
 ;
 attrNode
@@ -970,6 +952,7 @@ runNextTest
 ;
 }
 )
+;
 }
 function
 testQueuedMutations
@@ -1054,7 +1037,7 @@ newattr
 ;
 for
 (
-var
+let
 i
 =
 0
@@ -1372,6 +1355,7 @@ runNextTest
 ;
 }
 )
+;
 }
 addTest
 (
@@ -1380,14 +1364,13 @@ cleanup
 (
 )
 {
-delete
 gInspectee
+=
+null
 ;
-delete
 gWalker
-;
-delete
-gClient
+=
+null
 ;
 runNextTest
 (
