--- a/devtools/server/tests/mochitest/test_inspector-mutations-childlist.html
+++ b/devtools/server/tests/mochitest/test_inspector-mutations-childlist.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,22 +176,18 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspectee
 =
 null
 ;
-var
+let
 gWalker
 =
 null
 ;
-var
-gClient
-=
-null
-;
-var
+let
 gCleanupConnection
 =
 null
@@ -285,10 +270,6 @@ walker
 =
 >
 {
-gClient
-=
-client
-;
 gWalker
 =
 walker
@@ -312,10 +293,6 @@ teardown
 )
 {
 gWalker
-=
-null
-;
-gClient
 =
 null
 ;
@@ -343,9 +320,7 @@ assertOwnership
 (
 )
 {
-let
-num
-=
+return
 assertOwnershipTrees
 (
 gWalker
@@ -663,6 +638,20 @@ our
 dummy
 mutation
 .
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+max
+-
+nested
+-
+callbacks
 mutations
 =
 mutations
@@ -743,7 +732,9 @@ runNextTest
 ;
 }
 )
+;
 }
+;
 }
 /
 /
@@ -875,6 +866,7 @@ childList
 .
 "
 )
+;
 ok
 (
 remove
@@ -894,6 +886,7 @@ removal
 .
 "
 )
+;
 let
 add
 =
@@ -921,6 +914,7 @@ removal
 .
 "
 )
+;
 ok
 (
 add
@@ -940,6 +934,7 @@ addition
 .
 "
 )
+;
 let
 a
 =
@@ -1105,6 +1100,7 @@ childList
 .
 "
 )
+;
 ok
 (
 remove
@@ -1124,6 +1120,7 @@ removal
 .
 "
 )
+;
 let
 add
 =
@@ -1151,6 +1148,7 @@ removal
 .
 "
 )
+;
 ok
 (
 add
@@ -1170,6 +1168,7 @@ addition
 .
 "
 )
+;
 let
 a
 =
@@ -2171,6 +2170,8 @@ of
 our
 visible
 subtree
+/
+/
 and
 clean
 it
@@ -2312,14 +2313,13 @@ cleanup
 (
 )
 {
-delete
 gInspectee
+=
+null
 ;
-delete
 gWalker
-;
-delete
-gClient
+=
+null
 ;
 runNextTest
 (
