--- a/devtools/server/tests/mochitest/test_inspector-mutations-events.html
+++ b/devtools/server/tests/mochitest/test_inspector-mutations-events.html
@@ -154,6 +154,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -390,6 +395,7 @@ querySelector
 a
 "
 )
+;
 eventNode2
 =
 inspectee
@@ -401,6 +407,7 @@ querySelector
 b
 "
 )
+;
 eventFront1
 =
 yield
@@ -693,6 +700,7 @@ single
 node
 "
 )
+;
 eventNode1
 .
 addEventListener
@@ -1316,6 +1324,7 @@ a
 mutation
 "
 )
+;
 eventNode1
 .
 setAttribute
@@ -1413,7 +1422,6 @@ false
 )
 ;
 }
-;
 function
 waitForMutations
 (
@@ -1455,6 +1463,7 @@ runNextTest
 )
 ;
 }
+;
 <
 /
 script
