--- a/devtools/server/tests/mochitest/test_inspector-mutations-frameload.html
+++ b/devtools/server/tests/mochitest/test_inspector-mutations-frameload.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,32 +176,23 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspectee
 =
 null
 ;
-var
+let
 gWalker
 =
 null
 ;
-var
+let
 gClient
 =
 null
 ;
-var
-gChildFrame
-=
-null
-;
-var
-gChildDocument
-=
-null
-;
-var
+let
 gCleanupConnection
 =
 null
@@ -333,10 +313,6 @@ gInspectee
 =
 null
 ;
-gChildFrame
-=
-null
-;
 if
 (
 gCleanupConnection
@@ -411,10 +387,6 @@ child
 .
 "
 )
-;
-gChildFrame
-=
-frame
 ;
 return
 gWalker
@@ -514,11 +486,6 @@ setup
 =
 >
 {
-let
-beforeUnloadSize
-=
-0
-;
 /
 /
 Load
@@ -706,11 +673,6 @@ setup
 =
 >
 {
-let
-beforeUnloadSize
-=
-0
-;
 /
 /
 Load
@@ -993,11 +955,6 @@ setup
 =
 >
 {
-let
-beforeUnloadSize
-=
-0
-;
 /
 /
 Load
@@ -1277,11 +1234,6 @@ setup
 =
 >
 {
-let
-beforeUnloadSize
-=
-0
-;
 /
 /
 Load
@@ -1401,6 +1353,8 @@ to
 change
 the
 source
+/
+/
 and
 expect
 the
