--- a/devtools/server/tests/mochitest/test_inspector-mutations-value.html
+++ b/devtools/server/tests/mochitest/test_inspector-mutations-value.html
@@ -152,6 +152,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 const
 inspector
 =
@@ -187,6 +192,7 @@ runNextTest
 )
 ;
 }
+;
 const
 testSummaryLength
 =
@@ -219,22 +225,17 @@ DEFAULT_VALUE_SUMMARY_LENGTH
 }
 )
 ;
-var
+let
 gInspectee
 =
 null
 ;
-var
+let
 gWalker
 =
 null
 ;
-var
-gClient
-=
-null
-;
-var
+let
 valueNode
 ;
 var
@@ -249,17 +250,6 @@ longString
 "
 stringstringstringstringstringstringstringstringstringstringstring
 "
-;
-var
-truncatedLongString
-=
-longString
-.
-substring
-(
-0
-testSummaryLength
-)
 ;
 var
 shortString
@@ -330,7 +320,7 @@ inspector
 )
 ;
 let
-inspector
+inspectorFront
 =
 InspectorFront
 (
@@ -340,7 +330,7 @@ tab
 ;
 promiseDone
 (
-inspector
+inspectorFront
 .
 getWalker
 (
@@ -366,10 +356,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
@@ -532,10 +518,10 @@ gInspectee
 .
 querySelector
 (
-'
+"
 #
 childFrame
-'
+"
 )
 ;
 valueNode
@@ -755,6 +741,7 @@ expected
 ;
 }
 )
+;
 }
 function
 testKeepLongValue
@@ -1211,14 +1198,13 @@ cleanup
 (
 )
 {
-delete
 gInspectee
+=
+null
 ;
-delete
 gWalker
-;
-delete
-gClient
+=
+null
 ;
 runNextTest
 (
