--- a/devtools/server/tests/mochitest/test_inspector-pick-color.html
+++ b/devtools/server/tests/mochitest/test_inspector-pick-color.html
@@ -196,6 +196,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -205,66 +210,10 @@ function
 )
 {
 const
-Cu
-=
-Components
-.
-utils
-;
-Cu
-.
-import
-(
-"
-resource
-:
-/
-/
-devtools
-/
-shared
-/
-Loader
-.
-jsm
-"
-)
-;
-const
-{
-Promise
-:
-promise
-}
-=
-Cu
-.
-import
-(
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Promise
-.
-jsm
-"
-{
-}
-)
-;
-const
 {
 InspectorFront
 }
 =
-devtools
-.
 require
 (
 "
@@ -276,32 +225,6 @@ fronts
 /
 inspector
 "
-)
-;
-const
-{
-console
-}
-=
-Cu
-.
-import
-(
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Console
-.
-jsm
-"
-{
-}
 )
 ;
 SimpleTest
