--- a/devtools/server/tests/mochitest/test_inspector-pseudoclass-lock.html
+++ b/devtools/server/tests/mochitest/test_inspector-pseudoclass-lock.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 const
 DOMUtils
@@ -203,19 +192,20 @@ const
 KNOWN_PSEUDOCLASSES
 =
 [
-'
+"
 :
 hover
-'
-'
+"
+"
 :
 active
-'
-'
+"
+"
 :
 focus
-'
+"
 ]
+;
 window
 .
 onload
@@ -235,22 +225,18 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspectee
 =
 null
 ;
-var
+let
 gWalker
 =
 null
 ;
-var
-gClient
-=
-null
-;
-var
+let
 gCleanupConnection
 =
 null
@@ -333,10 +319,6 @@ walker
 =
 >
 {
-gClient
-=
-client
-;
 gWalker
 =
 walker
@@ -360,10 +342,6 @@ teardown
 )
 {
 gWalker
-=
-null
-;
-gClient
 =
 null
 ;
@@ -424,6 +402,7 @@ expectation
 .
 id
 )
+{
 is
 (
 target
@@ -446,12 +425,14 @@ expectation
 id
 )
 ;
+}
 if
 (
 expectation
 .
 nodeName
 )
+{
 is
 (
 target
@@ -474,6 +455,7 @@ expectation
 nodeName
 )
 ;
+}
 is
 (
 target
@@ -840,10 +822,10 @@ gWalker
 addPseudoClassLock
 (
 nodeFront
-'
+"
 :
 active
-'
+"
 )
 ;
 /
@@ -962,10 +944,10 @@ gWalker
 addPseudoClassLock
 (
 nodeFront
-'
+"
 :
 hover
-'
+"
 {
 parents
 :
@@ -998,75 +980,75 @@ expectedMutations
 {
 id
 :
-'
+"
 b
-'
+"
 nodeName
 :
-'
+"
 DIV
-'
+"
 pseudos
 :
 [
-'
+"
 :
 hover
-'
-'
+"
+"
 :
 active
-'
+"
 ]
 }
 {
 id
 :
-'
+"
 longlist
-'
+"
 nodeName
 :
-'
+"
 DIV
-'
+"
 pseudos
 :
 [
-'
+"
 :
 hover
-'
+"
 ]
 }
 {
 nodeName
 :
-'
+"
 BODY
-'
+"
 pseudos
 :
 [
-'
+"
 :
 hover
-'
+"
 ]
 }
 {
 nodeName
 :
-'
+"
 HTML
-'
+"
 pseudos
 :
 [
-'
+"
 :
 hover
-'
+"
 ]
 }
 ]
@@ -1102,10 +1084,10 @@ gWalker
 removePseudoClassLock
 (
 nodeFront
-'
+"
 :
 hover
-'
+"
 {
 parents
 :
@@ -1138,14 +1120,14 @@ expectedMutations
 {
 id
 :
-'
+"
 b
-'
+"
 nodeName
 :
-'
+"
 DIV
-'
+"
 /
 /
 Should
@@ -1161,23 +1143,23 @@ node
 pseudos
 :
 [
-'
+"
 :
 active
-'
+"
 ]
 }
 {
 id
 :
-'
+"
 longlist
-'
+"
 nodeName
 :
-'
+"
 DIV
-'
+"
 pseudos
 :
 [
@@ -1186,9 +1168,9 @@ pseudos
 {
 nodeName
 :
-'
+"
 BODY
-'
+"
 pseudos
 :
 [
@@ -1197,9 +1179,9 @@ pseudos
 {
 nodeName
 :
-'
+"
 HTML
-'
+"
 pseudos
 :
 [
@@ -1383,10 +1365,10 @@ DOMUtils
 hasPseudoClassLock
 (
 contentNode
-'
+"
 :
 active
-'
+"
 )
 "
 Pseudoclass
