--- a/devtools/server/tests/mochitest/test_inspector-release.html
+++ b/devtools/server/tests/mochitest/test_inspector-release.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,12 +176,13 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gWalker
 =
 null
 ;
-var
+let
 gClient
 =
 null
@@ -410,6 +400,8 @@ children
 and
 incorporated
 them
+/
+/
 in
 our
 ownership
@@ -635,6 +627,8 @@ now
 be
 53
 fewer
+/
+/
 (
 we
 forgot
@@ -724,11 +718,13 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
-delete
 gClient
+=
+null
 ;
 runNextTest
 (
