--- a/devtools/server/tests/mochitest/test_inspector-reload.html
+++ b/devtools/server/tests/mochitest/test_inspector-reload.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,17 +176,13 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspectee
 =
 null
 ;
-var
-gClient
-=
-null
-;
-var
+let
 gWalker
 =
 null
@@ -294,10 +279,6 @@ actor
 "
 )
 ;
-gClient
-=
-client
-;
 gWalker
 =
 walker
@@ -373,9 +354,6 @@ testReload
 (
 )
 {
-let
-nodeFront
-;
 let
 oldRootID
 =
@@ -541,14 +519,13 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
-delete
 gInspectee
-;
-delete
-gClient
+=
+null
 ;
 runNextTest
 (
