--- a/devtools/server/tests/mochitest/test_inspector-remove.html
+++ b/devtools/server/tests/mochitest/test_inspector-remove.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,13 +176,19 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gWalker
 =
 null
 ;
-var
+let
 gClient
+=
+null
+;
+let
+gInspectee
 =
 null
 ;
@@ -809,11 +804,17 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
-delete
 gClient
+=
+null
+;
+gInspectee
+=
+null
 ;
 runNextTest
 (
