--- a/devtools/server/tests/mochitest/test_inspector-resolve-url.html
+++ b/devtools/server/tests/mochitest/test_inspector-resolve-url.html
@@ -154,21 +154,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -189,10 +178,11 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspector
 ;
-var
+let
 gDoc
 ;
 addTest
@@ -652,6 +642,8 @@ function
 {
 gInspector
 =
+null
+;
 gDoc
 =
 null
