--- a/devtools/server/tests/mochitest/test_inspector-retain.html
+++ b/devtools/server/tests/mochitest/test_inspector-retain.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,17 +176,13 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gWalker
 =
 null
 ;
-var
-gClient
-=
-null
-;
-var
+let
 gInspectee
 =
 null
@@ -306,10 +291,6 @@ actor
 "
 )
 ;
-gClient
-=
-client
-;
 gWalker
 =
 walker
@@ -409,11 +390,6 @@ bodyFront
 null
 ;
 let
-frameFront
-=
-null
-;
-let
 childListFront
 =
 null
@@ -507,10 +483,6 @@ frame
 =
 >
 {
-frameFront
-=
-frame
-;
 return
 gWalker
 .
@@ -639,13 +611,6 @@ then
 =
 >
 {
-let
-size
-=
-assertOwnership
-(
-)
-;
 let
 clientTree
 =
@@ -797,14 +762,6 @@ assertOwnership
 (
 )
 ;
-let
-clientTree
-=
-clientOwnershipTree
-(
-gWalker
-)
-;
 is
 (
 gWalker
@@ -846,6 +803,7 @@ node
 .
 "
 )
+;
 ok
 (
 gWalker
@@ -866,6 +824,7 @@ node
 .
 "
 )
+;
 }
 )
 .
@@ -938,14 +897,6 @@ mutations
 {
 assertOwnership
 (
-)
-;
-let
-clientTree
-=
-clientOwnershipTree
-(
-gWalker
 )
 ;
 is
@@ -1134,14 +1085,6 @@ assertOwnership
 (
 )
 ;
-let
-clientTree
-=
-clientOwnershipTree
-(
-gWalker
-)
-;
 is
 (
 gWalker
@@ -1214,14 +1157,6 @@ test
 .
 assertOwnership
 (
-)
-;
-let
-clientTree
-=
-clientOwnershipTree
-(
-gWalker
 )
 ;
 is
@@ -1435,6 +1370,7 @@ retainNode
 (
 front
 )
+;
 }
 )
 .
@@ -1444,7 +1380,6 @@ then
 )
 =
 >
-{
 ok
 (
 false
@@ -1457,8 +1392,6 @@ succeeded
 !
 "
 )
-;
-}
 (
 err
 )
@@ -1479,14 +1412,6 @@ the
 race
 .
 "
-)
-;
-let
-clientTree
-=
-clientOwnershipTree
-(
-gWalker
 )
 ;
 is
@@ -1538,11 +1463,13 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
-delete
-gClient
+gInspectee
+=
+null
 ;
 runNextTest
 (
