--- a/devtools/server/tests/mochitest/test_inspector-scroll-into-view.html
+++ b/devtools/server/tests/mochitest/test_inspector-scroll-into-view.html
@@ -154,21 +154,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -189,32 +178,17 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspectee
 =
 null
 ;
-var
-gClient
-=
-null
-;
-var
+let
 gWalker
 =
 null
 ;
-function
-assertOwnership
-(
-)
-{
-assertOwnershipTrees
-(
-gWalker
-)
-;
-}
 addTest
 (
 function
@@ -306,10 +280,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
@@ -538,14 +508,13 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
-delete
 gInspectee
-;
-delete
-gClient
+=
+null
 ;
 runNextTest
 (
