--- a/devtools/server/tests/mochitest/test_inspector-traversal.html
+++ b/devtools/server/tests/mochitest/test_inspector-traversal.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-server
-/
-actors
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,22 +176,23 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspectee
 =
 null
 ;
-var
+let
 gClient
 =
 null
 ;
-var
+let
 gWalker
 =
 null
 ;
-var
+let
 checkActorIDs
 =
 [
@@ -1204,6 +1194,7 @@ Expect
 node
 "
 )
+;
 is
 (
 nodes
@@ -1449,11 +1440,12 @@ listed
 let
 responseIds
 =
-'
-'
+"
+"
 ;
 for
 (
+let
 node
 of
 response
@@ -1487,6 +1479,7 @@ assertOwnership
 )
 ;
 }
+;
 }
 addTest
 (
@@ -1558,10 +1551,10 @@ testLongListTraversal
 (
 )
 {
-var
+let
 longList
 ;
-var
+let
 allChildren
 ;
 promiseDone
@@ -1688,9 +1681,9 @@ nodeArrayChecker
 (
 true
 false
-'
+"
 abcde
-'
+"
 )
 )
 ;
@@ -1750,9 +1743,9 @@ nodeArrayChecker
 (
 true
 false
-'
+"
 abcde
-'
+"
 )
 )
 ;
@@ -1798,9 +1791,9 @@ is
 center
 .
 id
-'
+"
 n
-'
+"
 "
 Make
 sure
@@ -1836,9 +1829,9 @@ nodeArrayChecker
 (
 false
 false
-'
+"
 lmnop
-'
+"
 )
 )
 ;
@@ -1897,9 +1890,9 @@ nodeArrayChecker
 (
 false
 true
-'
+"
 vwxyz
-'
+"
 )
 )
 ;
@@ -1943,9 +1936,9 @@ is
 start
 .
 id
-'
+"
 n
-'
+"
 "
 Make
 sure
@@ -1958,6 +1951,7 @@ letters
 .
 "
 )
+;
 return
 gWalker
 .
@@ -1980,9 +1974,9 @@ nodeArrayChecker
 (
 false
 false
-'
+"
 nopqr
-'
+"
 )
 )
 ;
@@ -2034,9 +2028,9 @@ nodeArrayChecker
 (
 false
 true
-'
+"
 yz
-'
+"
 )
 )
 ;
@@ -2666,32 +2660,32 @@ let
 expectedParents
 =
 [
-'
+"
 DIV
-'
-'
+"
+"
 BODY
-'
-'
+"
+"
 HTML
-'
-'
+"
+"
 #
 document
-'
-'
+"
+"
 IFRAME
-'
-'
+"
+"
 BODY
-'
-'
+"
+"
 HTML
-'
-'
+"
+"
 #
 document
-'
+"
 ]
 ;
 for
@@ -2748,6 +2742,22 @@ const
 testSummaryLength
 =
 10
+;
+const
+inspector
+=
+require
+(
+"
+devtools
+/
+server
+/
+actors
+/
+inspector
+"
+)
 ;
 inspector
 .
@@ -3228,6 +3238,7 @@ all
 (
 promises
 )
+;
 }
 )
 .
@@ -3247,14 +3258,17 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
-delete
 gInspectee
+=
+null
 ;
-delete
 gClient
+=
+null
 ;
 runNextTest
 (
