--- a/devtools/server/tests/mochitest/test_inspector_getImageData-wait-for-load.html
+++ b/devtools/server/tests/mochitest/test_inspector_getImageData-wait-for-load.html
@@ -203,6 +203,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 const
 flags
 =
@@ -228,15 +233,17 @@ SimpleTest
 .
 registerCleanupFunction
 (
+function
 (
 )
-=
->
+{
 flags
 .
 testing
 =
 wasTesting
+;
+}
 )
 ;
 const
@@ -342,17 +349,18 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gImg
 =
 null
 ;
-var
+let
 gNodeFront
 =
 null
 ;
-var
+let
 gWalker
 =
 null
@@ -434,6 +442,20 @@ gWalker
 =
 walker
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+max
+-
+nested
+-
+callbacks
 return
 walker
 .
@@ -763,13 +785,17 @@ cleanup
 (
 )
 {
-delete
 gImg
+=
+null
 ;
-delete
 gNodeFront
-delete
+=
+null
+;
 gWalker
+=
+null
 ;
 runNextTest
 (
