--- a/devtools/server/tests/mochitest/test_inspector_getImageData.html
+++ b/devtools/server/tests/mochitest/test_inspector_getImageData.html
@@ -154,21 +154,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -189,7 +178,8 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gWalker
 =
 null
@@ -447,6 +437,20 @@ resized
 "
 )
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+max
+-
+nested
+-
+callbacks
 imageData
 .
 data
@@ -654,6 +658,20 @@ resized
 "
 )
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+max
+-
+nested
+-
+callbacks
 imageData
 .
 data
@@ -861,6 +879,20 @@ resized
 "
 )
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+max
+-
+nested
+-
+callbacks
 imageData
 .
 data
@@ -1067,6 +1099,20 @@ resized
 "
 )
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+max
+-
+nested
+-
+callbacks
 imageData
 .
 data
@@ -1169,8 +1215,9 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
 runNextTest
 (
