--- a/devtools/server/tests/mochitest/test_inspector_getImageDataFromURL.html
+++ b/devtools/server/tests/mochitest/test_inspector_getImageDataFromURL.html
@@ -197,6 +197,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 const
 flags
 =
@@ -222,15 +227,17 @@ SimpleTest
 .
 registerCleanupFunction
 (
+function
 (
 )
-=
->
+{
 flags
 .
 testing
 =
 wasTesting
+;
+}
 )
 ;
 const
@@ -336,7 +343,8 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspector
 =
 null
@@ -614,8 +622,9 @@ cleanup
 (
 )
 {
-delete
 gInspector
+=
+null
 ;
 runNextTest
 (
