--- a/devtools/server/tests/mochitest/test_makeGlobalObjectReference.html
+++ b/devtools/server/tests/mochitest/test_makeGlobalObjectReference.html
@@ -152,6 +152,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 Components
 .
 utils
@@ -192,7 +197,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+let
 iframe
 =
 document
@@ -222,6 +227,9 @@ word
 '
 smorgasbord
 '
+"
++
+"
 spoken
 by
 an
@@ -256,18 +264,13 @@ iframeOnLoad
 (
 )
 {
-var
+let
 dbg
 =
 new
 Debugger
-;
-var
-g1o
-=
-iframe
-.
-contentWindow
+(
+)
 ;
 /
 /
@@ -279,6 +282,13 @@ for
 outer
 window
 '
+let
+g1o
+=
+iframe
+.
+contentWindow
+;
 ok
 (
 !
@@ -330,7 +340,7 @@ Debugger
 Object
 '
 .
-var
+let
 g1iDO
 =
 dbg
@@ -478,7 +488,7 @@ and
 outer
 windows
 .
-var
+let
 g1oDO
 =
 g1iDO
@@ -524,6 +534,9 @@ unsafeDereference
 (
 )
 outerizes
+"
++
+"
 so
 inner
 and
@@ -630,7 +643,7 @@ window
 "
 )
 ;
-var
+let
 iframe2
 =
 document
@@ -657,6 +670,9 @@ html
 >
 Her
 retrospection
+"
++
+"
 in
 hindsight
 was
@@ -694,7 +710,7 @@ makeGlobalObjectReference
 dereferences
 CCWs
 .
-var
+let
 g2o
 =
 iframe2
@@ -707,7 +723,7 @@ g1o
 =
 g1o
 ;
-var
+let
 g2iDO
 =
 dbg
@@ -717,16 +733,16 @@ addDebuggee
 g2o
 )
 ;
-var
+let
 g2g1oDO
 =
 g2iDO
 .
 getOwnPropertyDescriptor
 (
-'
+"
 g1o
-'
+"
 )
 .
 value
@@ -821,6 +837,7 @@ finish
 }
 }
 }
+;
 <
 /
 script
