--- a/devtools/server/tests/mochitest/test_memory_allocations_01.html
+++ b/devtools/server/tests/mochitest/test_memory_allocations_01.html
@@ -152,6 +152,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -175,7 +180,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -217,11 +222,23 @@ Allocate
 some
 objects
 .
-var
+let
 alloc1
 alloc2
 alloc3
 ;
+/
+*
+eslint
+-
+disable
+max
+-
+nested
+-
+callbacks
+*
+/
 (
 function
 outer
@@ -270,6 +287,18 @@ Error
 .
 lineNumber
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+new
+-
+parens
 alloc3
 =
 new
@@ -304,7 +333,19 @@ lineNumber
 )
 )
 ;
-var
+/
+*
+eslint
+-
+enable
+max
+-
+nested
+-
+callbacks
+*
+/
+let
 response
 =
 yield
@@ -363,7 +404,7 @@ isTestAllocation
 alloc
 )
 {
-var
+let
 frame
 =
 response
@@ -423,7 +464,7 @@ line
 )
 ;
 }
-var
+let
 testAllocations
 =
 response
@@ -526,7 +567,7 @@ others
 etc
 )
 .
-var
+let
 expectedLines
 =
 new
@@ -547,13 +588,13 @@ line
 ;
 for
 (
-var
+let
 alloc
 of
 testAllocations
 )
 {
-var
+let
 innerFrame
 =
 response
@@ -594,7 +635,7 @@ innerFrame
 line
 )
 ;
-var
+let
 middleFrame
 =
 response
@@ -628,7 +669,7 @@ middle
 "
 )
 ;
-var
+let
 outerFrame
 =
 response
