--- a/devtools/server/tests/mochitest/test_memory_allocations_02.html
+++ b/devtools/server/tests/mochitest/test_memory_allocations_02.html
@@ -159,6 +159,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -182,7 +187,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -200,18 +205,18 @@ attach
 (
 )
 ;
-var
+let
 allocs
 =
 [
 ]
 ;
-var
+let
 eventsFired
 =
 0
 ;
-var
+let
 intervalId
 =
 null
@@ -242,7 +247,7 @@ setInterval
 {
 for
 (
-var
+let
 i
 =
 100000
@@ -364,7 +369,7 @@ eventsFired
 =
 0
 ;
-var
+let
 startTime
 =
 performance
@@ -373,7 +378,7 @@ now
 (
 )
 ;
-var
+let
 drainTimer
 =
 1000000
