--- a/devtools/server/tests/mochitest/test_memory_allocations_03.html
+++ b/devtools/server/tests/mochitest/test_memory_allocations_03.html
@@ -160,6 +160,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -183,7 +188,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -241,7 +246,7 @@ in
 /
 between
 .
-var
+let
 allocs
 =
 [
@@ -273,7 +278,7 @@ waitForTime
 2
 )
 ;
-var
+let
 first
 =
 yield
@@ -295,7 +300,7 @@ waitForTime
 2
 )
 ;
-var
+let
 second
 =
 yield
@@ -390,22 +395,6 @@ a
 b
 )
 {
-info
-(
-"
-Checking
-frames
-at
-index
-"
-+
-i
-+
-"
-:
-"
-)
-;
 info
 (
 "
@@ -518,7 +507,7 @@ parent
 }
 for
 (
-var
+let
 i
 =
 0
@@ -536,6 +525,22 @@ i
 +
 )
 {
+info
+(
+"
+Checking
+frames
+at
+index
+"
++
+i
++
+"
+:
+"
+)
+;
 assertSameFrame
 (
 first
