--- a/devtools/server/tests/mochitest/test_memory_allocations_05.html
+++ b/devtools/server/tests/mochitest/test_memory_allocations_05.html
@@ -155,6 +155,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -178,7 +183,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -196,7 +201,7 @@ attach
 (
 )
 ;
-var
+let
 allocs
 =
 [
@@ -213,6 +218,8 @@ push
 (
 new
 Object
+(
+)
 )
 ;
 }
@@ -260,7 +267,7 @@ actuallyWaitOneWholeMillisecond
 (
 )
 {
-var
+let
 start
 =
 window
@@ -271,6 +278,16 @@ now
 (
 )
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+curly
 while
 (
 window
@@ -316,7 +333,7 @@ allocator
 (
 )
 ;
-var
+let
 response
 =
 yield
@@ -373,7 +390,7 @@ allocation
 "
 )
 ;
-var
+let
 allocatorIndices
 =
 response
@@ -388,7 +405,7 @@ a
 idx
 )
 {
-var
+let
 frame
 =
 response
@@ -418,6 +435,9 @@ return
 idx
 ;
 }
+return
+null
+;
 }
 )
 .
@@ -433,7 +453,7 @@ idx
 !
 =
 =
-undefined
+null
 ;
 }
 )
@@ -458,12 +478,12 @@ timeouts
 "
 )
 ;
-var
+let
 lastTimestamp
 ;
 for
 (
-var
+let
 i
 =
 0
@@ -477,7 +497,7 @@ i
 +
 )
 {
-var
+let
 timestamp
 =
 response
@@ -520,7 +540,7 @@ if
 lastTimestamp
 )
 {
-var
+let
 delta
 =
 timestamp
@@ -538,17 +558,15 @@ timestamp
 delta
 )
 ;
+/
+/
+ms
 ok
 (
 delta
 >
 =
 1
-/
-*
-ms
-*
-/
 "
 The
 timestamp
