--- a/devtools/server/tests/mochitest/test_memory_allocations_06.html
+++ b/devtools/server/tests/mochitest/test_memory_allocations_06.html
@@ -159,6 +159,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -182,7 +187,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -200,7 +205,7 @@ attach
 (
 )
 ;
-var
+let
 allocs
 =
 [
@@ -217,6 +222,8 @@ push
 (
 new
 Object
+(
+)
 )
 ;
 }
@@ -244,7 +251,7 @@ allocator
 (
 )
 ;
-var
+let
 response
 =
 yield
