--- a/devtools/server/tests/mochitest/test_memory_attach_02.html
+++ b/devtools/server/tests/mochitest/test_memory_attach_02.html
@@ -158,6 +158,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -181,7 +186,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -192,7 +197,7 @@ startServerAndGetSelectedTabMemory
 (
 )
 ;
-var
+let
 e
 =
 null
