--- a/devtools/server/tests/mochitest/test_memory_gc_01.html
+++ b/devtools/server/tests/mochitest/test_memory_gc_01.html
@@ -153,6 +153,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -176,7 +181,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -187,9 +192,13 @@ startServerAndGetSelectedTabMemory
 (
 )
 ;
+let
+beforeGC
+afterGC
+;
 do
 {
-var
+let
 objects
 =
 [
@@ -197,7 +206,7 @@ objects
 ;
 for
 (
-var
+let
 i
 =
 0
@@ -211,7 +220,7 @@ i
 +
 )
 {
-var
+let
 o
 =
 {
@@ -240,14 +249,13 @@ objects
 =
 null
 ;
-var
+yield
 {
 total
 :
 beforeGC
 }
 =
-yield
 memory
 .
 measure
@@ -261,14 +269,13 @@ forceGarbageCollection
 (
 )
 ;
-var
+yield
 {
 total
 :
 afterGC
 }
 =
-yield
 memory
 .
 measure
