--- a/devtools/server/tests/mochitest/test_memory_gc_events.html
+++ b/devtools/server/tests/mochitest/test_memory_gc_events.html
@@ -157,6 +157,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -171,7 +176,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+let
 event
 =
 require
@@ -194,7 +199,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -212,7 +217,7 @@ attach
 (
 )
 ;
-var
+let
 gotGcEvent
 =
 new
