--- a/devtools/server/tests/mochitest/test_preference.html
+++ b/devtools/server/tests/mochitest/test_preference.html
@@ -131,33 +131,31 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 function
 runTests
 (
 )
 {
-var
+let
 Cu
 =
 Components
 .
 utils
 ;
-var
-Cc
-=
-Components
-.
-classes
-;
-var
+let
 Ci
 =
 Components
 .
 interfaces
 ;
-var
+let
 {
 require
 }
@@ -183,7 +181,7 @@ jsm
 }
 )
 ;
-var
+let
 {
 DebuggerClient
 }
@@ -201,7 +199,7 @@ main
 "
 )
 ;
-var
+let
 {
 DebuggerServer
 }
@@ -217,7 +215,7 @@ main
 "
 )
 ;
-var
+let
 Services
 =
 require
@@ -233,7 +231,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+let
 {
 getPreferenceFront
 }
@@ -263,7 +261,7 @@ addBrowserActors
 (
 )
 ;
-var
+let
 client
 =
 new
@@ -296,25 +294,25 @@ listTabs
 function
 onListTabs
 (
-aResponse
+response
 )
 {
-var
+let
 p
 =
 getPreferenceFront
 (
 client
-aResponse
+response
 )
 ;
-var
+let
 prefs
 =
 {
 }
 ;
-var
+let
 localPref
 =
 {
@@ -419,7 +417,7 @@ function
 key
 )
 {
-var
+let
 expectedValue
 ;
 switch
@@ -681,8 +679,31 @@ SimpleTest
 finish
 (
 )
+;
 }
 )
+;
+}
+function
+updatePrefsProperty
+(
+key
+)
+{
+return
+function
+(
+value
+)
+{
+prefs
+[
+key
+]
+=
+value
+;
+}
 ;
 }
 p
@@ -693,19 +714,12 @@ getAllPrefs
 .
 then
 (
+updatePrefsProperty
 (
-json
-)
-=
->
-prefs
-[
 "
 allPrefs
 "
-]
-=
-json
+)
 )
 .
 then
@@ -791,19 +805,12 @@ bool
 .
 then
 (
+updatePrefsProperty
 (
-value
-)
-=
->
-prefs
-[
 "
 boolPref
 "
-]
-=
-value
+)
 )
 .
 then
@@ -826,19 +833,12 @@ int
 .
 then
 (
+updatePrefsProperty
 (
-value
-)
-=
->
-prefs
-[
 "
 intPref
 "
-]
-=
-value
+)
 )
 .
 then
@@ -861,19 +861,12 @@ string
 .
 then
 (
+updatePrefsProperty
 (
-value
-)
-=
->
-prefs
-[
 "
 charPref
 "
-]
-=
-value
+)
 )
 .
 then
@@ -1012,6 +1005,7 @@ runTests
 )
 ;
 }
+;
 <
 /
 script
