--- a/devtools/server/tests/mochitest/test_styles-applied.html
+++ b/devtools/server/tests/mochitest/test_styles-applied.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-server
-/
-actors
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,18 +176,14 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gWalker
 =
 null
 ;
-var
+let
 gStyles
-=
-null
-;
-var
-gClient
 =
 null
 ;
@@ -289,10 +274,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
@@ -1501,14 +1482,13 @@ cleanup
 (
 )
 {
-delete
 gStyles
+=
+null
 ;
-delete
 gWalker
-;
-delete
-gClient
+=
+null
 ;
 runNextTest
 (
