--- a/devtools/server/tests/mochitest/test_styles-computed.html
+++ b/devtools/server/tests/mochitest/test_styles-computed.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-server
-/
-actors
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,18 +176,14 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gWalker
 =
 null
 ;
-var
+let
 gStyles
-=
-null
-;
-var
-gClient
 =
 null
 ;
@@ -234,10 +219,6 @@ tab
 doc
 )
 {
-gInspectee
-=
-doc
-;
 let
 {
 InspectorFront
@@ -294,10 +275,6 @@ actor
 "
 )
 ;
-gClient
-=
-client
-;
 gWalker
 =
 walker
@@ -344,28 +321,6 @@ testComputed
 (
 )
 {
-let
-localNode
-=
-gInspectee
-.
-querySelector
-(
-"
-#
-computed
--
-test
--
-node
-"
-)
-;
-let
-elementStyle
-=
-null
-;
 promiseDone
 (
 gWalker
@@ -470,11 +425,8 @@ appear
 is
 (
 computed
-[
-"
+.
 display
-"
-]
 .
 value
 "
@@ -492,11 +444,8 @@ appear
 is
 (
 computed
-[
-"
+.
 cursor
-"
-]
 .
 value
 "
@@ -514,11 +463,8 @@ appear
 is
 (
 computed
-[
-"
+.
 color
-"
-]
 .
 value
 "
@@ -581,11 +527,8 @@ ok
 (
 !
 computed
-[
-"
+.
 cursor
-"
-]
 .
 matched
 "
@@ -607,11 +550,8 @@ ok
 (
 !
 computed
-[
-"
+.
 color
-"
-]
 .
 matched
 "
@@ -676,28 +616,6 @@ testComputedUserMatched
 (
 )
 {
-let
-localNode
-=
-gInspectee
-.
-querySelector
-(
-"
-#
-computed
--
-test
--
-node
-"
-)
-;
-let
-elementStyle
-=
-null
-;
 promiseDone
 (
 gWalker
@@ -777,11 +695,8 @@ ok
 (
 !
 computed
-[
-"
+.
 display
-"
-]
 .
 matched
 "
@@ -796,11 +711,8 @@ match
 ok
 (
 computed
-[
-"
+.
 cursor
-"
-]
 .
 matched
 "
@@ -816,11 +728,8 @@ it
 ok
 (
 computed
-[
-"
+.
 color
-"
-]
 .
 matched
 "
@@ -874,28 +783,6 @@ testComputedSystemMatched
 (
 )
 {
-let
-localNode
-=
-gInspectee
-.
-querySelector
-(
-"
-#
-computed
--
-test
--
-node
-"
-)
-;
-let
-elementStyle
-=
-null
-;
 promiseDone
 (
 gWalker
@@ -974,11 +861,8 @@ match
 ok
 (
 computed
-[
-"
+.
 display
-"
-]
 .
 matched
 "
@@ -992,11 +876,8 @@ match
 ok
 (
 computed
-[
-"
+.
 cursor
-"
-]
 .
 matched
 "
@@ -1012,11 +893,8 @@ it
 ok
 (
 computed
-[
-"
+.
 color
-"
-]
 .
 matched
 "
@@ -1070,28 +948,6 @@ testComputedUserOnlyMatched
 (
 )
 {
-let
-localNode
-=
-gInspectee
-.
-querySelector
-(
-"
-#
-computed
--
-test
--
-node
-"
-)
-;
-let
-elementStyle
-=
-null
-;
 promiseDone
 (
 gWalker
@@ -1261,28 +1117,6 @@ testComputedSystemOnlyMatched
 (
 )
 {
-let
-localNode
-=
-gInspectee
-.
-querySelector
-(
-"
-#
-computed
--
-test
--
-node
-"
-)
-;
-let
-elementStyle
-=
-null
-;
 promiseDone
 (
 gWalker
@@ -1449,14 +1283,13 @@ cleanup
 (
 )
 {
-delete
 gStyles
+=
+null
 ;
-delete
 gWalker
-;
-delete
-gClient
+=
+null
 ;
 runNextTest
 (
