--- a/devtools/server/tests/mochitest/test_styles-matched.html
+++ b/devtools/server/tests/mochitest/test_styles-matched.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-server
-/
-actors
-/
-inspector
+use
+strict
 "
-)
 ;
 const
 CssLogic
@@ -205,18 +194,19 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gWalker
 =
 null
 ;
-var
+let
 gStyles
 =
 null
 ;
-var
-gClient
+let
+gInspectee
 =
 null
 ;
@@ -311,10 +301,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
@@ -501,6 +487,7 @@ best
 match
 "
 )
+;
 is
 (
 matched
@@ -548,6 +535,7 @@ this
 document
 "
 )
+;
 is
 (
 matched
@@ -638,6 +626,7 @@ the
 parent
 "
 )
+;
 is
 (
 matched
@@ -900,14 +889,17 @@ cleanup
 (
 )
 {
-delete
 gStyles
+=
+null
 ;
-delete
 gWalker
+=
+null
 ;
-delete
-gClient
+gInspectee
+=
+null
 ;
 runNextTest
 (
