--- a/devtools/server/tests/mochitest/test_styles-modify.html
+++ b/devtools/server/tests/mochitest/test_styles-modify.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-server
-/
-actors
-/
-inspector
+use
+strict
 "
-)
 ;
 const
 {
@@ -207,6 +196,7 @@ runNextTest
 )
 ;
 }
+;
 var
 gWalker
 =
@@ -218,7 +208,7 @@ gStyles
 null
 ;
 var
-gClient
+gInspectee
 =
 null
 ;
@@ -269,10 +259,6 @@ doc
 gInspectee
 =
 doc
-;
-gClient
-=
-client
 ;
 let
 {
@@ -731,14 +717,17 @@ cleanup
 (
 )
 {
-delete
 gStyles
+=
+null
 ;
-delete
 gWalker
+=
+null
 ;
-delete
-gClient
+gInspectee
+=
+null
 ;
 runNextTest
 (
