--- a/devtools/server/tests/mochitest/test_unsafeDereference.html
+++ b/devtools/server/tests/mochitest/test_unsafeDereference.html
@@ -172,6 +172,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 Components
 .
 utils
@@ -212,7 +217,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+let
 iframe
 =
 document
@@ -262,13 +267,15 @@ function
 (
 )
 {
-var
+let
 dbg
 =
 new
 Debugger
+(
+)
 ;
-var
+let
 contentDO
 =
 dbg
@@ -280,16 +287,16 @@ iframe
 contentWindow
 )
 ;
-var
+let
 xhrDesc
 =
 contentDO
 .
 getOwnPropertyDescriptor
 (
-'
+"
 xhr
-'
+"
 )
 ;
 isnot
@@ -324,7 +331,7 @@ value
 "
 )
 ;
-var
+let
 xhr
 =
 xhrDesc
@@ -411,6 +418,7 @@ finish
 )
 ;
 }
+;
 document
 .
 body
@@ -421,6 +429,7 @@ iframe
 )
 ;
 }
+;
 <
 /
 script
