--- a/devtools/server/tests/mochitest/test_framerate_01.html
+++ b/devtools/server/tests/mochitest/test_framerate_01.html
@@ -128,6 +128,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -136,28 +141,14 @@ function
 (
 )
 {
-var
+const
 Cu
 =
 Components
 .
 utils
 ;
-var
-Cc
-=
-Components
-.
-classes
-;
-var
-Ci
-=
-Components
-.
-interfaces
-;
-var
+const
 {
 require
 }
@@ -183,7 +174,7 @@ jsm
 }
 )
 ;
-var
+const
 Services
 =
 require
@@ -193,7 +184,7 @@ Services
 "
 )
 ;
-var
+const
 {
 DebuggerClient
 }
@@ -211,7 +202,7 @@ main
 "
 )
 ;
-var
+const
 {
 DebuggerServer
 }
@@ -284,7 +275,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+const
 {
 FramerateFront
 }
@@ -314,13 +305,13 @@ clamp
 60
 )
 {
-var
+let
 timeline
 =
 [
 ]
 ;
-var
+let
 totalTicks
 =
 ticks
@@ -393,12 +384,12 @@ return
 timeline
 ;
 }
-var
+let
 frameCount
 =
 0
 ;
-var
+let
 prevTime
 =
 ticks
@@ -408,7 +399,7 @@ ticks
 ;
 for
 (
-var
+let
 i
 =
 1
@@ -422,7 +413,7 @@ i
 +
 )
 {
-var
+let
 currTime
 =
 ticks
@@ -434,7 +425,7 @@ frameCount
 +
 +
 ;
-var
+let
 elapsedTime
 =
 currTime
@@ -451,7 +442,7 @@ interval
 continue
 ;
 }
-var
+let
 framerate
 =
 Math
@@ -509,7 +500,6 @@ return
 timeline
 ;
 }
-;
 if
 (
 !
@@ -531,7 +521,7 @@ addBrowserActors
 )
 ;
 }
-var
+let
 client
 =
 new
@@ -564,22 +554,22 @@ listTabs
 function
 onListTabs
 (
-aResponse
+response
 )
 {
-var
+let
 form
 =
-aResponse
+response
 .
 tabs
 [
-aResponse
+response
 .
 selected
 ]
 ;
-var
+let
 front
 =
 FramerateFront
@@ -597,6 +587,18 @@ setTimeout
 =
 >
 {
+/
+*
+eslint
+-
+disable
+max
+-
+nested
+-
+callbacks
+*
+/
 front
 .
 startRecording
@@ -647,6 +649,18 @@ rawData
 }
 )
 ;
+/
+*
+eslint
+-
+enable
+max
+-
+nested
+-
+callbacks
+*
+/
 }
 1000
 )
@@ -678,7 +692,7 @@ available
 "
 )
 ;
-var
+let
 timeline
 =
 plotFPS
@@ -710,7 +724,7 @@ entries
 "
 )
 ;
-var
+let
 prevTimeStart
 =
 timeline
@@ -722,7 +736,7 @@ delta
 ;
 for
 (
-var
+let
 i
 =
 0
@@ -739,7 +753,7 @@ i
 2
 )
 {
-var
+let
 currTimeStart
 =
 timeline
@@ -749,7 +763,7 @@ i
 .
 delta
 ;
-var
+let
 currTimeEnd
 =
 timeline
@@ -822,15 +836,9 @@ prevTimeStart
 currTimeEnd
 ;
 }
-var
-prevFramerateValue
-=
--
-1
-;
 for
 (
-var
+let
 i
 =
 0
@@ -847,7 +855,7 @@ i
 2
 )
 {
-var
+let
 currFramerateStart
 =
 timeline
@@ -857,7 +865,7 @@ i
 .
 value
 ;
-var
+let
 currFramerateEnd
 =
 timeline
@@ -930,9 +938,6 @@ clamped
 .
 "
 )
-prevFramerateValue
-=
-currFramerateStart
 ;
 }
 client
@@ -959,11 +964,13 @@ SimpleTest
 finish
 (
 )
+;
 }
 )
 ;
 }
 }
+;
 <
 /
 script
