--- a/devtools/server/tests/mochitest/test_framerate_03.html
+++ b/devtools/server/tests/mochitest/test_framerate_03.html
@@ -136,6 +136,11 @@ test
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -144,28 +149,14 @@ function
 (
 )
 {
-var
+const
 Cu
 =
 Components
 .
 utils
 ;
-var
-Cc
-=
-Components
-.
-classes
-;
-var
-Ci
-=
-Components
-.
-interfaces
-;
-var
+const
 {
 require
 }
@@ -191,7 +182,7 @@ jsm
 }
 )
 ;
-var
+const
 {
 DebuggerClient
 }
@@ -209,7 +200,7 @@ main
 "
 )
 ;
-var
+const
 {
 DebuggerServer
 }
@@ -225,7 +216,7 @@ main
 "
 )
 ;
-var
+const
 Services
 =
 require
@@ -292,7 +283,7 @@ waitForExplicitFinish
 (
 )
 ;
-var
+const
 {
 FramerateFront
 }
@@ -310,17 +301,17 @@ framerate
 "
 )
 ;
-var
+const
 START_TICK
 =
 2000
 ;
-var
+const
 STOP_TICK
 =
 3000
 ;
-var
+const
 TOTAL_TIME
 =
 5000
@@ -346,7 +337,7 @@ addBrowserActors
 )
 ;
 }
-var
+let
 client
 =
 new
@@ -379,22 +370,22 @@ listTabs
 function
 onListTabs
 (
-aResponse
+response
 )
 {
-var
+let
 form
 =
-aResponse
+response
 .
 tabs
 [
-aResponse
+response
 .
 selected
 ]
 ;
-var
+let
 front
 =
 FramerateFront
@@ -416,6 +407,18 @@ then
 =
 >
 {
+/
+*
+eslint
+-
+disable
+max
+-
+nested
+-
+callbacks
+*
+/
 window
 .
 setTimeout
@@ -452,6 +455,18 @@ rawData
 TOTAL_TIME
 )
 ;
+/
+*
+eslint
+-
+enable
+max
+-
+nested
+-
+callbacks
+*
+/
 }
 )
 ;
@@ -536,7 +551,7 @@ after
 ;
 for
 (
-var
+let
 tick
 of
 rawData
@@ -595,11 +610,13 @@ SimpleTest
 finish
 (
 )
+;
 }
 )
 ;
 }
 }
+;
 <
 /
 script
