--- a/devtools/server/tests/mochitest/test_inspector-changeattrs.html
+++ b/devtools/server/tests/mochitest/test_inspector-changeattrs.html
@@ -152,21 +152,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -187,38 +176,17 @@ runNextTest
 )
 ;
 }
-var
+;
+let
 gInspectee
 =
 null
 ;
-var
-gClient
-=
-null
-;
-var
+let
 gWalker
 =
 null
 ;
-var
-checkActorIDs
-=
-[
-]
-;
-function
-assertOwnership
-(
-)
-{
-assertOwnershipTrees
-(
-gWalker
-)
-;
-}
 addTest
 (
 function
@@ -310,10 +278,6 @@ actor
 .
 "
 )
-;
-gClient
-=
-client
 ;
 gWalker
 =
@@ -770,14 +734,13 @@ cleanup
 (
 )
 {
-delete
 gWalker
+=
+null
 ;
-delete
 gInspectee
-;
-delete
-gClient
+=
+null
 ;
 runNextTest
 (
