--- a/devtools/server/tests/mochitest/test_inspector-resize.html
+++ b/devtools/server/tests/mochitest/test_inspector-resize.html
@@ -170,6 +170,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -239,32 +244,6 @@ inspector
 "
 )
 ;
-const
-{
-console
-}
-=
-Cu
-.
-import
-(
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Console
-.
-jsm
-"
-{
-}
-)
-;
 SimpleTest
 .
 waitForExplicitFinish
@@ -316,6 +295,18 @@ inspectorContent
 .
 href
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+new
+-
+cap
 yield
 new
 promise
@@ -433,6 +424,18 @@ outerHeight
 =
 win
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+new
+-
+cap
 let
 onResize
 =
