--- a/devtools/server/tests/mochitest/test_inspector-search-front.html
+++ b/devtools/server/tests/mochitest/test_inspector-search-front.html
@@ -154,6 +154,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -223,32 +228,6 @@ inspector
 "
 )
 ;
-const
-{
-console
-}
-=
-Cu
-.
-import
-(
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Console
-.
-jsm
-"
-{
-}
-)
-;
 SimpleTest
 .
 waitForExplicitFinish
@@ -257,11 +236,6 @@ waitForExplicitFinish
 ;
 let
 walkerFront
-=
-null
-;
-let
-inspectee
 =
 null
 ;
@@ -346,6 +320,18 @@ inspectorContent
 .
 href
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+new
+-
+cap
 yield
 new
 promise
@@ -365,10 +351,6 @@ tab
 doc
 )
 {
-inspectee
-=
-doc
-;
 inspector
 =
 InspectorFront
