--- a/devtools/server/tests/mochitest/test_inspector-search.html
+++ b/devtools/server/tests/mochitest/test_inspector-search.html
@@ -154,6 +154,11 @@ application
 javascript
 "
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -244,32 +249,6 @@ walker
 -
 search
 "
-)
-;
-const
-{
-console
-}
-=
-Cu
-.
-import
-(
-"
-resource
-:
-/
-/
-gre
-/
-modules
-/
-Console
-.
-jsm
-"
-{
-}
 )
 ;
 SimpleTest
@@ -366,6 +345,18 @@ inspectorContent
 .
 href
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+new
+-
+cap
 yield
 new
 promise
@@ -760,6 +751,7 @@ query
 "
 )
 ;
+let
 results
 =
 walkerSearch
@@ -1376,6 +1368,7 @@ text
 ]
 }
 ]
+;
 for
 (
 let
@@ -1936,6 +1929,18 @@ removal
 "
 )
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+new
+-
+cap
 yield
 new
 promise
@@ -2055,6 +2060,18 @@ addition
 "
 )
 ;
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+new
+-
+cap
 yield
 new
 promise
@@ -2194,6 +2211,18 @@ mutateDocumentAndWaitForMutation
 mutationFn
 )
 {
+/
+/
+eslint
+-
+disable
+-
+next
+-
+line
+new
+-
+cap
 return
 new
 promise
