--- a/devtools/server/tests/mochitest/test_memory.html
+++ b/devtools/server/tests/mochitest/test_memory.html
@@ -157,6 +157,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -180,7 +185,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -191,7 +196,7 @@ startServerAndGetSelectedTabMemory
 (
 )
 ;
-var
+let
 measurement
 =
 yield
