--- a/devtools/server/tests/mochitest/test_memory_allocations_04.html
+++ b/devtools/server/tests/mochitest/test_memory_allocations_04.html
@@ -159,6 +159,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -182,7 +187,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -200,7 +205,7 @@ attach
 (
 )
 ;
-var
+let
 allocs
 =
 [
@@ -213,7 +218,7 @@ allocator
 {
 for
 (
-var
+let
 i
 =
 0
@@ -237,7 +242,7 @@ push
 ;
 }
 }
-var
+let
 testProbability
 =
 Task
@@ -277,7 +282,7 @@ allocator
 (
 )
 ;
-var
+let
 response
 =
 yield
