--- a/devtools/server/tests/mochitest/test_memory_census.html
+++ b/devtools/server/tests/mochitest/test_memory_census.html
@@ -156,6 +156,11 @@ script
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -179,7 +184,7 @@ function
 (
 )
 {
-var
+let
 {
 memory
 client
@@ -197,7 +202,7 @@ attach
 (
 )
 ;
-var
+let
 census
 =
 yield
